#1 Dummy icons added

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,10 @@ x64/
 # Configurations
 *.suo
 
+*.opendb
+*.db
+*.db
+ts-audio-device-switch.VC.db
+ts-audio-device-switch/ts-audio-device-switch.vcxproj.user
+ts-audio-device-switch.VC.db
+ts-audio-device-switch.VC.db
