--- a/ts-audio-device-switch/ts-audio-device-switch.vcxproj
+++ b/ts-audio-device-switch/ts-audio-device-switch.vcxproj
@@ -62,6 +62,7 @@
   </PropertyGroup>
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <PlatformToolset>v140</PlatformToolset>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'" Label="Configuration">
     <PlatformToolset>v140</PlatformToolset>
